refect(recommend) : 신청한거에 대한 조회기능